# ClassRanker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_core.cmd  build_full.cmd  class_data_template.xlsx  patch_openxlsx.cmake  操作手册.txt
config/: formulas.ini  ui_settings.ini
examples/: bonuses.csv  courses.csv  students.csv
src/: csv.cpp  expression.cpp  expression.hpp  gui.cpp  main.cpp  qt_gui.cpp  table_io.hpp  xlsx.cpp
test-results/: comprehensive_ranking.csv  gpa_ranking.csv  score_ranking.csv  summary.csv
